docs/index.css
:root {
  --clr-bg: snow;
  --clr-txt: black;
  --clr-sec: rgba(0,255,255,.8);
  --clr-btn: #c1c1c1;
  --clr-sel: #7360ff;
  --clr-line: purple;
  --clr-shadow: #00C;
  --fade-time: .3s;
  --main-margin: 32ch;
  --color-scheme: light dark;
  --time: 3s;
}
*,
  *::before,
  *::after {
    box-sizing: border-box;
}
* {
  margin: 0;
  padding: 0;
  font-size: inherit;
}
html:focus-within {
  scroll-behavior: smooth;
}
html, body {
  font-size:calc(12px + 1.5svw);
  /*! height: calc(100svh - 2rem); */
  line-height: 1.6;
}
body {
  background: radial-gradient(circle, white 10%, var(--clr-sec));
}
img {
  max-width: 100%;
}
body > * {
  color: var(--clr-txt);
  background-color: var(--clr-bg);
}
header {
  --clr-bg: transparent;
  width: fit-content;
  margin-inline: auto;
  margin-top: min(2ch, 5%);
}
header > * {
  margin-inline: .5ch;
}
.tab_box, hr {
  display: none;
}
.tab_box {
  position: relative;
  overflow-x: auto;
}
.tab_box[active] {
  --clr-bg: snow;
  display: grid;
  position: fixed;
  right: 3em;
  width: fit-content;
  opacity: .9;
  transition: display 1s;
}
.tab_btn {
  background: transparent;
  border: .1rem solid transparent;
  transition: background var(--fade-time) ease-in-out;
}
.tab_btn:not(.active):hover {
  background: var(--clr-sel);
  color: var(--clr-btn);
  cursor: pointer;
}
.tab_box .tab_btn.active {
  color: var(--clr-sel);
}
#active-line {
  position: absolute;
  bottom: 0;
  background: var(--clr-line);
  height: .25ch;
  border-radius: .6rem;
  transition: all var(--fade-time) ease-in-out;
}
#nav-active {
  position: fixed;
  right: 3ch;
  top: 2ch;
  padding: .25em .5em;
  background: var(--clr-bg);
  border: 2px solid black;
  border-radius: 1em;
}
#nav-active:hover {
  background: var(--clr-sel);
  color: var(--clr-btn);
  cursor: pointer;
}
hr {
  margin: 2ch auto;
  color: var(--clr-sec);
}
main {
  --clr-bg: transparent;
  margin-top: 5ch;
  margin-inline: auto;
}
h1 {
  width: fit-content;
  margin-inline: auto;
}
h2 {
  user-select: none;
  text-align: center;
  margin-bottom: 2ch;
}
h3 {
  font-size: .9rem;
}
p {
  font-size: .7rem;
}
.content-box .content {
  display: none;
  animation: moving var(--fade-time) ease;
}
.content-box .content.active {
  display: block;
}
.content-box {
  width: 60%;
  margin-inline: auto;
}
a {
  display: grid;
}
.content-ico {
  width: fit-content;
  margin-inline: auto;
  box-shadow: 0 .2rem .5rem rgba(100,100,100,.3)
}
.scan-contain {
  display: flex;
  /*! gap: 2.25rem; */
  justify-content: center;
}
.scan-txt {
  font-size: 1.5rem;
  text-align: center;
  color: var(--clr-sec);
  text-shadow: 0px 0px 4rem var(--clr-shadow);
}
.scan-box {
  --contents-length: 0;
  background: var(--clr-shadow);
  animation: movescan var(--time) forwards ease-in-out 1;  
}
ul {
  list-style: none;
}
.contact-row {
  display: flex;
  justify-content: center;
}
.contact-row a {
  transition: background var(--fade-time) ease-in-out;
}
.contact-row img {
  transition: filter var(--fade-time) ease-in-out;
}
.contact-row img:hover, .contact-row a:focus-within {
  filter: invert(100%);
  background: var(--clr-line);
}
footer {
  --clr-bg: transparent; 
  min-height: 5ch;
}
@media (orientation: landscape) {
  main {
    margin-top: 0;
  } 
  main, hr {
  max-width: calc(100% - var(--main-margin));
}
  h2 {
  }
  .tab_box, hr {
    display: block;
  }
  #nav-active {
    visibility: hidden;
  }
  .content-box {
    width: auto;
  }
  ul {
    margin-inline: auto;
    max-width: 80%;
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(10ch, 1fr));
    place-items: center;
    gap: 2ch;
  }
  ul li {
    font-size: .8rem;
    box-shadow: 0 .1rem .5rem var(--clr-btn);
    border: .1rem solid transparent;
    border-radius: 1rem;
    padding: .25rem;
  }
}
@media (prefers-color-scheme: dark) {
  :root {
    text-shadow: 1px 1px .8rem white;
    background-color: black;
  }
  body {
    background: rgba(10, 10, 10, .8);
  }
  main > * {
    color: var(--clr-sec);
  }
  .tab_btn {
    color: white;
  }
  .contact-row img {
  filter: invert(100%);
  }
  .contact-row img:hover, .contact-row a:focus-within {
  filter: invert(10%);
  background: var(--clr-sel);
  }  
}
@keyframes moving {
  from{transform: translateX(50px);opacity: 0;}
  to {transform: translateX(0px); opacity: 1;}
}
@keyframes movescan {
  from {
    border-left: 2px solid var(--clr-line);
    margin-left: calc(-1 * var(--contents-length));
    width: var(--contents-length);
  }
  to {
    border-left: 0px solid transparent;
    margin-left: 0px;
    width: 0;
  }
}

